--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <section id="street">
     <h1>Good Eats- Street Tacos</h1>
 <h2>Street Tacos</h2>
-<aside>
-Save  (save svg)
-Share (share svg)
-Print (print svg)
-Jump to Recipe (jump svg)
-</aside>
+<menu>
+<li>Save</li>  (save svg)
+<li>Share</li> (share svg)
+<li>Print</li> (print svg)
+<li>Jump to Recipe</li> (jump svg)
+</menu>
 <div>
 <img class="taco" src="images\street-tacos.png">
 </div>
@@ -85,31 +85,37 @@ Servings: 6 Tacos
 </section>
 </article>
 <section id="side">
-Need some side dishes?
+    
+<h2>Need some side dishes?</h2>
+
 <div>
 <h3>Mexican Rice</h3>
 <img src="images\mexican-rice.png">
 <p>Traditional recipe with a twist.</p>
 Rating: 4 of 5 Stars
 </div>
+
 <div> 
 <h3>Salsa</h3>
 <img src="images\salsa.png">
 <p>Just the right amount of spice</p>.
 Rating: 5 of 5 Stars
 </div>
+
 <div> 
 <h3>Guacamole</h3>
 <img src="images\guacamole.png">
 <p>Fresh and healthy.</p>
 Rating: 4 of 5 Stars
 </div>
+
 <div> 
 <h3>Tortillas</h3>
 <img src="images\tortillas.png">
 <p>Easy to make and so good.</p> 
 Rating: 4 of 5 Stars
 </div>
+
 </section> 
 
 Search (search svg)
@@ -121,9 +127,11 @@ Instagram (instagram svg)
 YouTube (youtube svg)
 Tik Tok (tiktok svg)
 Good Eats 
+<div>
 Copyright 2022 
 Taco Cheesington
-(Taco-cheesington.png)
+<img src="images\taco-cheesington.png">
+</div>
 </footer>
 </body>
 </html>
