--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <section id="street">
     <h1>Good Eats- Street Tacos</h1>
 <h2>Street Tacos</h2>
+<div class="sidetoside">
 <menu>
 <li>Save</li>  (save svg)
 <li>Share</li> (share svg)
@@ -40,6 +41,7 @@
 </menu>
 <div>
 <img class="taco" src="images\street-tacos.png">
+</div>
 </div>
 <p>Street tacos are delicious, amazing, and oh so mouthwatering! Bite into tender steak, zesty lime flavor with a hint of spice and add on tomatoes, avocado, and onions for a savory bite you are going to love!</p>
 
